--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -3,7 +3,10 @@ layout: default
 ---
 
 <!-- Page Header -->
+<!--
 <header class="intro-header" style="background-image: url('{{ site.baseurl }}/{% if page.header-img %}{{ page.header-img }}{% else %}{{ site.header-img }}{% endif %}')">
+-->
+<header class="intro-header" style="background-image: url('{{ site.baseurl }}')">
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 ">
@@ -122,8 +125,7 @@ layout: default
                                     </span>
                                 </a>
                             </li>
-                            {% endif %}
-			
+                            {% endif %}			
                             {% if site.RSS %}
                             <li>
                                 <a href="{{ "/feed.xml" | prepend: site.baseurl }}">
@@ -194,17 +196,18 @@ layout: default
                                     </span>
                                 </a>
                             </li>
-                            {% endif %}
-                            
+                            {% endif %}                            
                         </ul>
+			
+			<h5>Contact Information</h5>
                         {% if site.email %}
-			    <p>✉️:<br/>{{site.email}}</p>
+			    <p>✉️: {{site.email}}</p>
                         {% endif %}
 			{% if site.github_username %}
-			    <p>GitHub:<br/><a href="https://github.com/{{site.github_username}}">liyaoplus</a></p>
+			    <p>GitHub: <a href="https://github.com/{{site.github_username}}">liyaoplus</a></p>
                         {% endif %}
 			{% if site.address %}
-			    <p>⛪:<br />{{site.address}}</p>
+			    <p>⛪:<br/>{{site.address}}</p>
                         {% endif %}
                     </div>
                 </section>
