--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,7 +9,8 @@ layout: default
 <header class="intro-header">
     <div class="container">
         <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-5 col-md-offset-1 ">
+            <!-- <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 "> -->
+	    <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 ">
                 <div class="site-heading">
                     <!--<h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>-->
                     <!--<hr class="small">-->
@@ -122,7 +123,7 @@ layout: default
 			    <p style="color:black;font-size:16px;">GitHub: <a href="https://github.com/{{site.github_username}}">liyaoplus</a></p>
                         {% endif %}
 			{% if site.github_username %}
-			    <p style="color:black;">Curriculum Vitae (CV): <a href="https://liyaoplus.github.io/{{ site.cv_filename }}">liyao</a></p>
+			    <p style="color:black;font-size:16px">CV: <a href="https://liyaoplus.github.io/{{ site.cv_filename }}">liyao</a></p>
                         {% endif %}
 			{% if site.address %}
 			    <p>⛪:<br/>{{site.address}}</p>
@@ -139,8 +140,7 @@ layout: default
                                     </span>
                                 </a>
                             </li>
-                            {% endif %}
-                            <!-- add jianshu add target = "_blank" to <a> by BY -->
+                            {% endif %}                            
                             {% if site.jianshu_username %}
                             <li>
                                 <a target="_blank" href="https://www.jianshu.com/u/{{ site.jianshu_username }}">
