--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,16 +8,16 @@ layout: default
 -->
 <header class="intro-header">
     <div class="container">
-        <div class="row">
+        <!-- <div class="row"> -->
             <!-- <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 "> -->
-	    <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 ">
-                <div class="site-heading">
+	    <!-- <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 ">
+                <div class="site-heading"> -->
                     <!--<h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>-->
                     <!--<hr class="small">-->
-                    <span class="subheading">{{ page.description }}</span>
+                    <!-- <span class="subheading">{{ page.description }}</span>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </header>
 
@@ -123,7 +123,7 @@ layout: default
 			    <p style="color:black;font-size:16px;">GitHub: <a href="https://github.com/{{site.github_username}}">liyaoplus</a></p>
                         {% endif %}
 			{% if site.github_username %}
-			    <p style="color:black;font-size:16px">CV: <a href="https://liyaoplus.github.io/{{ site.cv_filename }}">liyao</a></p>
+			    <p style="color:black;font-size:16px">CV: <a href="https://liyaoplus.github.io/{{ site.cv_filename }}">Liyao</a></p>
                         {% endif %}
 			{% if site.address %}
 			    <p>⛪:<br/>{{site.address}}</p>
