--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -526,7 +526,8 @@ pre code {
   }
 }
 .intro-header .site-heading {
-  padding: 95px 0 70px;
+  /* padding: 95px 0 70px;*/
+  padding: 70px 0 70px;
 }
 @media only screen and (min-width: 768px) {
   .intro-header .site-heading {
