--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -526,12 +526,13 @@ pre code {
   }
 }
 .intro-header .site-heading {
-  /* padding: 95px 0 70px;*/
+  /* padding: 95px 0 70px; */
   padding: 70px 0 70px;
 }
 @media only screen and (min-width: 768px) {
   .intro-header .site-heading {
-    padding: 150px 0;
+    /* padding: 150px 0; */
+    padding: 50px 0;
   }
 }
 .intro-header .site-heading,
