--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -515,19 +515,21 @@ pre code {
 .intro-header .site-heading,
 .intro-header .post-heading,
 .intro-header .page-heading {
-  padding: 85px 0 55px;
+  /* padding: 85px 0 55px; */
+  padding: 50px 0 50px;
   color: white;
 }
 @media only screen and (min-width: 768px) {
   .intro-header .site-heading,
   .intro-header .post-heading,
   .intro-header .page-heading {
-    padding: 150px 0;
+    /* padding: 150px 0; */
+    padding: 50px 0;
   }
 }
 .intro-header .site-heading {
   /* padding: 95px 0 70px; */
-  padding: 70px 0 70px;
+  padding: 50px 0 50px;
 }
 @media only screen and (min-width: 768px) {
   .intro-header .site-heading {
