--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -121,19 +121,19 @@ layout: default
 		<!-- Contack Information -->
 		<section  class="visible-md visible-lg">
 		    <hr>
-		    <h4 style="color:black;">Contact Information</h4>
+		    <h4>Contact Information</h4>
 		    <div class="short-about">
                         {% if site.email %}
 			    <p style="color:black;">✉️: <a href="mailto:{{site.email}}">{{site.email}}</a></p>
                         {% endif %}
 			{% if site.github_username %}
-			    <p style="color:black;font-size:16px;">GitHub: <a href="https://github.com/{{site.github_username}}">liyaoplus</a></p>
+			    <p style="font-size:16px;">GitHub: <a href="https://github.com/{{site.github_username}}">liyaoplus</a></p>
                         {% endif %}
 			{% if site.github_username %}
 			    <p style="color:black;font-size:16px;">CV: <a href="https://liyaoplus.github.io/{{ site.cv_filename }}">Liyao</a></p>
                         {% endif %}
 			{% if site.address %}
-			    <p style="font-size:10px;">⛪:<br/>{{site.address}}</p>
+			    <p style="font-size:10px;">⛪: {{site.address}}</p>
                         {% endif %}
 		    </div>
 		    <hr>	
