--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -104,7 +104,7 @@ layout: default
 
                 <!-- Short About -->
                 <section class="visible-md visible-lg">
-                    <hr><h5><a href="{{'/about/' | prepend: site.baseurl }}">ABOUT ME</a></h5>
+                    <hr><h5 style="color:black;"><a href="{{'/about/' | prepend: site.baseurl }}">ABOUT ME</a></h5>
                     <div class="short-about">
                         {% if site.sidebar-avatar %}
                             <!--<a href="{{ site.baseurl }}/about">-->
@@ -119,21 +119,21 @@ layout: default
                 </section>
 		
 		<!-- Contack Information -->
-		<section  class="visible-md visible-lg">
+		<section class="visible-md visible-lg">
 		    <hr>
-		    <h4>Contact Information</h4>
+		    <h4 style="color:black;">CONTACT INFORM</h4>
 		    <div class="short-about">
                         {% if site.email %}
 			    <p style="color:black;">✉️: <a href="mailto:{{site.email}}">{{site.email}}</a></p>
                         {% endif %}
 			{% if site.github_username %}
-			    <p style="font-size:16px;">GitHub: <a href="https://github.com/{{site.github_username}}">liyaoplus</a></p>
+			    <p style="color:black;font-size:16px;">GitHub: <a href="https://github.com/{{site.github_username}}">liyaoplus</a></p>
                         {% endif %}
 			{% if site.github_username %}
 			    <p style="color:black;font-size:16px;">CV: <a href="https://liyaoplus.github.io/{{ site.cv_filename }}">Liyao</a></p>
                         {% endif %}
 			{% if site.address %}
-			    <p style="font-size:10px;">⛪: {{site.address}}</p>
+			    <p style="font-size:9px;">⛪: {{site.address}}</p>
                         {% endif %}
 		    </div>
 		    <hr>	
