--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -515,8 +515,7 @@ pre code {
 .intro-header .site-heading,
 .intro-header .post-heading,
 .intro-header .page-heading {
-  /* padding: 85px 0 55px; */
-  padding: 50px 0 50px;
+  padding: 85px 0 55px;
   color: white;
 }
 @media only screen and (min-width: 768px) {
@@ -528,13 +527,15 @@ pre code {
   }
 }
 .intro-header .site-heading {
-  /* padding: 95px 0 70px; */
-  padding: 50px 0 50px;
+  /* setting for the mobile display */
+  /* default: padding: 95px 0 70px; */
+  padding: 60px 0 50px;
 }
 @media only screen and (min-width: 768px) {
   .intro-header .site-heading {
-    /* padding: 150px 0; */
-    padding: 50px 0;
+    /* setting for the desktop display */
+    /* default: padding: 150px 0; */
+    padding: 100px 0;
   }
 }
 .intro-header .site-heading,
