--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -124,16 +124,19 @@ layout: default
 		    <h5 style="color:gray;">CONTACT INFORM</h5>
 		    <div class="short-about">
                         {% if site.email %}
-			    <p>✉️: <a href="mailto:{{site.email}}">{{site.email}}</a></p>
+			    <p>📧: <a href="mailto:{{site.email}}">{{site.email}}</a></p>
                         {% endif %}
 			{% if site.github_username %}
 			    <p style="color:gray;">GitHub: <a href="https://github.com/{{site.github_username}}">liyaoplus</a></p>
                         {% endif %}
-			{% if site.github_username %}
-			    <p style="color:gray;">CV: <a href="https://liyaoplus.github.io/{{ site.cv_filename }}">Liyao</a></p>
+		    	{% if site.mobile %}
+			    <p style="color:gray;">📱:</br>{{site.address}}</p>
                         {% endif %}
 			{% if site.address %}
-			    <p style="font-size:6px;">⛪: {{site.address}}</p>
+			    <p>🏫:</br>{{site.address}}</p>
+                        {% endif %}
+			{% if site.cv_filename %}
+			    <p style="color:gray;">CV: <a href="https://liyaoplus.github.io/{{ site.cv_filename }}">Liyao</a></p>
                         {% endif %}
 		    </div>
 		    <hr>	
