--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -133,7 +133,7 @@ layout: default
 			    <p style="color:gray;">📱:</br>{{site.address}}</p>
                         {% endif %}
 			{% if site.address %}
-			    <p>🏫:</br>{{site.address}}</p>
+			    <p>🏫: {{site.address}}</p>
                         {% endif %}
 			{% if site.cv_filename %}
 			    <p style="color:gray;">CV: <a href="https://liyaoplus.github.io/{{ site.cv_filename }}">Liyao</a></p>
