--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -167,6 +167,8 @@ layout: default
         </div>
     </div>
 </article>
+<!-- Add to support MathJax -->
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript" ></script>
 
 
 {% if site.disqus_username %}
