--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -169,16 +169,13 @@ layout: default
 </article>
 
 <!-- Add to support MathJax -->
-<!-- Old Setting
-<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript" ></script>
--->
-
 <!--<script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>-->
-<script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "AMS" } } }); </script>
+<!--<script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "AMS" } } }); </script>-->
 <script type="text/x-mathjax-config">
  MathJax.Hub.Config({
    tex2jax: {
-     inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+     <!--inlineMath: [ ['$','$'], ["\\(","\\)"] ],-->
+     inlineMath: [ ['$','$'] ],
      processEscapes: true
    }
  });
