--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -174,8 +174,8 @@ layout: default
 <script type="text/x-mathjax-config">
  MathJax.Hub.Config({
    tex2jax: {
-     <!--inlineMath: [ ['$','$'], ["\\(","\\)"] ],-->
-     inlineMath: [ ['$','$'] ],
+     inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+     <!--inlineMath: [ ['$','$'] ],-->
      processEscapes: true
    }
  });
