--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -170,7 +170,7 @@ layout: default
 
 <!-- Add to support MathJax -->
 <!--<script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>-->
-<!--<script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "AMS" } } }); </script>-->
+<script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "AMS" } } }); </script>
 <script type="text/x-mathjax-config">
  MathJax.Hub.Config({
    tex2jax: {
