--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -170,15 +170,23 @@ layout: default
 
 <!-- Add to support MathJax -->
 <!--<script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } }); </script>-->
-<script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "AMS" } } }); </script>
+<!--<script type="text/x-mathjax-config"> MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "AMS" } } }); </script>-->
+<!--
 <script type="text/x-mathjax-config">
  MathJax.Hub.Config({
    tex2jax: {
      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-     <!--inlineMath: [ ['$','$'] ],-->
      processEscapes: true
    }
  });
+</script>
+-->
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({            
+    TeX: {equationNumbers: {autoNumber: ["AMS"], useLabelIds: true}},
+    "HTML-CSS": {linebreaks: {automatic: true}},
+     SVG: {linebreaks: {automatic: true}}
+});
 </script>
 <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
