--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -186,7 +186,7 @@ MathJax.Hub.Config({
     },
     TeX: {
         equationNumbers: {
-	    <!--autoNumber: ["none"],-->
+	    autoNumber: ["none"],
 	    useLabelIds: true
 	}
     },
