--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -10,9 +10,9 @@ layout: default
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1 ">
-	    <!--<div class="col-lg-1 col-lg-offset-1 col-md-1 col-md-offset-1 ">-->
                 <div class="site-heading">
                     <!--<h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>-->
+		    <h1>{% if site.title %}{{ site.title }}{% endif %}</h1>
                     <!--<hr class="small">-->
                     <!--<span class="subheading">{{ page.description }}</span>-->
                 </div>
