--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -13,9 +13,10 @@ layout: default
                 <div class="site-heading">
                     <!--<h1>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</h1>-->
 		    <!--<h1>{% if site.title %}{{ site.title }}{% endif %}</h1>-->
-                    <hr class="small">
+                    <!--<hr class="small">-->
                     <!--<span class="subheading">{{ page.description }}</span>-->
 		    <span class="subheading">{{ site.description }}</span>
+		    <hr class="small">
                 </div>
             </div>
         </div>
